Update scrollbar, fix location names

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -38603,17 +38603,17 @@ body {
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
+  background-color: rgba(23, 26, 22, 0);
 }
 
 ::-webkit-scrollbar {
   width: 10px;
-  background-color: #F5F5F5;
+  background-color: rgba(23, 26, 22, 0);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #000000;
-  border: 2px solid #555555;
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 2px solid rgba(255, 255, 255, 0.05);
 }
 .marquee {
   margin: 0 auto;
